# NetTest

./: .gitmodules  CMakeLists.txt  README.md  README_zh_CN.md
.github/workflows/: android_build.yml  build.yml
android/: AndroidManifest.xml
page/: ClientPage.qml  DNSQueryPage.qml  Main.qml  MainPage.qml  ServerPage.qml  TextAreaButton.qml
src/: Global.cpp  Global.h  Settings.cpp  Settings.h  main.cpp
src/WebSocket/: WebSocketClient.cpp  WebSocketClient.h  WebSocketServer.cpp  WebSocketServer.h
src/dns/: DnsParser.cpp  DnsParser.h  DnsQuery.cpp  DnsQuery.h  DnsResponse.cpp  DnsResponse.h
src/tcp/: TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h
src/udp/: UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h
translations/: NetTest_zh_CN.ts
